# PODSL

./: .editorconfig  .gitmodules  CMakeLists.txt  conanfile.txt
.github/workflows/: main.yml
examples/SampleProject/: CMakeLists.txt
examples/SampleProjectConan/: CMakeLists.txt  conanfile.txt
src/: Aspen.h  CMakeLists.txt  ErrorCodes.cpp  ErrorCodes.h  Exception.cpp  Exception.h  Graph.cpp  Graph.h  MajorityModel.cpp  MajorityModel.h  ModelBase.cpp  ModelBase.h  PODSL.h  PODSLEnums.cpp  PODSLEnums.h  PajekParser.cpp  PajekParser.h  QVoterModel.cpp  QVoterModel.h  Simulation.cpp  Simulation.h  StringUtils.cpp  StringUtils.h  SznajdModel.cpp  SznajdModel.h  VoterModel.cpp  VoterModel.h
tests/: CMakeLists.txt  ExampleTests.cpp  Graph.cpp  Model.cpp  Simulation.cpp  TestUtils.cpp  TestUtils.h  TestUtilsConstexpr.h.in
tests/examples/: regularSquare.dot  simpleConfig.json  simpleGraph.dot  simpleGraph.net  simpleGraph.xml  test.dot
